Mon Apr 10 11:00:46 2006  Søren Sandmann  <sandmann@redhat.com>

	* composite/compext.c (ProcCompositeReleaseOverlayWindow): Use
	FreeResource() instead of deleteCompOverlayClient().

2006-04-07  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/common/xf86Module.h:
	Bump the ABI versions.  Due to Glyph privates and the XV update below,
	the video driver ABI needs to be bumped to 1.0.  The rest of the ABI
	minor versions were bumped to include the LoaderGetABIVersion
	function.
	* hw/xfree86/common/xf86xv.c: (xf86XVRegetVideo),
	(xf86XVReputVideo), (xf86XVReputImage), (xf86XVPutStill),
	(xf86XVGetStill), (xf86XVPutImage):
	* hw/xfree86/common/xf86xv.h:
	Add a DrawblePtr argument to the XV hooks.  This allows drivers to
	determine that the target window is redirected and draw to the
	appropriate place.

2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xisb.c:
	* hw/xfree86/common/xisb.h:
	Remove libc wrapper types from Xisb interfaces.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Monitor.c:
	Coverity #488: Avoid smashing an array on malformed config 
	files.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxsingle.c:
	Coverity #769: Fix a potential memory leak for systems that 
	allocate on malloc(0)

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #838: Plug two more memory leaks.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #837: Fix another another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #836: Fix another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #835: Plug memory leak in extension section parsing.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Keyboard.c:
	Coverity #812: Fix parser memory leak.
